--- a/app/components/manage-intermissions/edit.hbs
+++ b/app/components/manage-intermissions/edit.hbs
@@ -62,7 +62,7 @@
     </div>
   </Modal.Body>
   <Modal.Footer>
-    <AuToolbar>
+    <AuToolbar as |Group|>
       <AuButton @skin="naked" {{on "click" this.cancel}}>
         {{t "manageIntermissions.cancelLabel"}}
       </AuButton>
