--- a/app/components/signatures/timeline-step.hbs
+++ b/app/components/signatures/timeline-step.hbs
@@ -12,15 +12,15 @@
   </c.header>
   <c.content>
     {{!-- Preview --}}
-    <AuToolbar @nowrap={{true}}>
-      <AuToolbarGroup>
+    <AuToolbar @nowrap={{true}} as |Group|>
+      <Group>
         <AuHeading @level="2" @skin="4">{{this.title}}</AuHeading>
-      </AuToolbarGroup>
-      <AuToolbarGroup>
+      </Group>
+      <Group>
         <AuPill @skin={{this.voorVertoningStatus.color}} class="au-u-margin-left">
           {{this.voorVertoningStatus.label}}
         </AuPill>
-      </AuToolbarGroup>
+      </Group>
     </AuToolbar>
     <div class="au-c-editor-preview au-u-margin-top-small au-u-margin-bottom-large">
       {{#if (has-block)}}
@@ -39,15 +39,15 @@
       </AuAlert>
     {{else}}
       {{!-- Sign --}}
-      <AuToolbar @nowrap={{true}} @border="bottom" class="au-u-padding-bottom-tiny au-u-margin-bottom-small">
-        <AuToolbarGroup>
+      <AuToolbar @nowrap={{true}} @border="bottom" class="au-u-padding-bottom-tiny au-u-margin-bottom-small"  as |Group|>
+        <Group>
           <AuHeading @level="2" @skin="4">{{concat (t "timelineStep.signStepTitle") @name}}</AuHeading>
-        </AuToolbarGroup>
-        <AuToolbarGroup>
+        </Group>
+        <Group>
           <AuPill @skin={{this.handtekeningStatus.color}} class="au-u-margin-left">
             {{this.handtekeningStatus.label}}
           </AuPill>
-        </AuToolbarGroup>
+        </Group>
       </AuToolbar>
       <div class="au-o-grid au-u-margin-top-none au-u-margin-bottom-large">
         {{#if (eq this.signaturesCount 2)}}
@@ -145,10 +145,10 @@
 
       {{!-- Print --}}
       {{#if this.canPrint}}
-      <AuToolbar @nowrap={{true}} @border="bottom" class="au-u-padding-bottom-tiny au-u-margin-bottom-small">
-        <AuToolbarGroup>
+      <AuToolbar @nowrap={{true}} @border="bottom" class="au-u-padding-bottom-tiny au-u-margin-bottom-small" as |Group|>
+        <Group>
           <AuHeading @level="2" @skin="4">{{t "timelineStep.printButtonLabel" name=@name}}</AuHeading>
-        </AuToolbarGroup>
+        </Group>
       </AuToolbar>
       <div class="au-u-margin-top-none au-u-margin-bottom-large">
         <AuButton {{ on 'click' @print }} >
@@ -158,15 +158,15 @@
       {{/if}}
 
       {{!-- Publish --}}
-      <AuToolbar @nowrap={{true}} @border="bottom" class="au-u-padding-bottom-tiny au-u-margin-bottom-small">
-        <AuToolbarGroup>
+      <AuToolbar @nowrap={{true}} @border="bottom" class="au-u-padding-bottom-tiny au-u-margin-bottom-small" as |Group|>
+        <Group>
           <AuHeading @level="2" @skin="4">{{t "timelineStep.publishButtonLabel" name=@name}}</AuHeading>
-        </AuToolbarGroup>
-        <AuToolbarGroup>
+        </Group>
+        <Group>
           <AuPill @skin={{if @publishedResource "success"}} class="au-u-margin-left">
             {{if @publishedResource "Publiek" "Niet publiek"}}
           </AuPill>
-        </AuToolbarGroup>
+        </Group>
       </AuToolbar>
       <div class="au-o-grid au-u-margin-top-none">
         {{#if this.isPublished}}
