--- a/app/templates/inbox/agendapoints.hbs
+++ b/app/templates/inbox/agendapoints.hbs
@@ -4,18 +4,18 @@
 <AuDataTable @content={{this.model}} @isLoading={{this.isLoadingModel}} @noDataMessage={{t 'inbox.agendapoints.noDataMessage'}} @sort={{this.sort}} @page={{this.page}} @size={{this.pageSize}} as |table|>
   <table.menu as |menu|>
     <menu.general>
-      <AuToolbar class="au-o-box" @size="large">
-        <AuToolbarGroup>
+      <AuToolbar class="au-o-box" @size="large" as |Group|>
+        <Group>
           <AuHeading @skin="2">
             {{t 'inbox.agendapoints.pageTitle'}}
           </AuHeading>
-        </AuToolbarGroup>
-        <AuToolbarGroup class="au-c-toolbar__group--center au-u-hide-on-print">
+        </Group>
+        <Group class="au-c-toolbar__group--center au-u-hide-on-print">
           <AuInput @icon="search" @iconAlignment="right" @value={{this.searchValue}} placeholder={{t 'inbox.agendapoints.searchPlaceholder'}} {{on "input" (perform this.updateFilter)}}/>
           {{#unless this.readOnly}}
             <AuLink @route="inbox.agendapoints.new" @skin="button" @icon="add" @iconAlignment="left">{{t "inbox.agendapoints.new.title"}}</AuLink>
           {{/unless}}
-        </AuToolbarGroup>
+        </Group>
       </AuToolbar>
     </menu.general>
   </table.menu>
