--- a/app/templates/inbox/imported.hbs
+++ b/app/templates/inbox/imported.hbs
@@ -2,17 +2,17 @@
 <AuDataTable @content={{model}} @isLoading={{isLoadingModel}} @noDataMessage="Geen documenten" @sort={{sort}} @page={{page}} @size={{size}} @class="container-flex--contain" as |t|>
   <t.menu as |menu|>
     <menu.general>
-      <AuToolbar @size="large">
-        <AuToolbarGroup>
+      <AuToolbar @size="large" as |Group|>
+        <Group>
           <AuHeading @skin="2">
             Geïmporteerde HTML bestanden
           </AuHeading>
-        </AuToolbarGroup>
-        <AuToolbarGroup>
+        </Group>
+        <Group>
           <TextSearch @filter={{title}} @placeholder="Zoek titel bestand" />
           <LinkTo @route="imported-documents.new" class="button button--alt">Importeer HTML bestand</LinkTo>
           <LinkTo @route="imported-documents.new" class="button">Nieuw ontwerpbesluit</LinkTo>
-        </AuToolbarGroup>
+        </Group>
       </AuToolbar>
     </menu.general>
   </t.menu>
