--- a/app/templates/meetings/publish.hbs
+++ b/app/templates/meetings/publish.hbs
@@ -1,12 +1,12 @@
 <div class="au-c-app-chrome">
-  <AuToolbar @size="small" class="au-u-padding-top-none au-u-padding-bottom-none">
-    <AuToolbarGroup>
+  <AuToolbar @size="small" class="au-u-padding-top-none au-u-padding-bottom-none" as |Group|>
+    <Group>
       <AuLink @route="meetings.edit" @model={{@model.id}} @skin="secondary" @icon="arrow-left" @iconAlignment="left">
         {{t "publish.backToMeeting"}}
       </AuLink>
       <span class="au-c-app-chrome__entity">{{t "publish.headingPartOne"}} {{detailed-date this.model.geplandeStart}}</span>
-    </AuToolbarGroup>
-    <AuToolbarGroup>
+    </Group>
+    <Group>
       <AuDropdown @title="{{this.currentSession.user.voornaam}} {{this.currentSession.user.achternaam}} - {{this.currentSession.group.classificatie.label}} {{this.currentSession.group.naam}}" @buttonLabel="Account settings" @alignment="right">
         {{#if this.acmSwitchEnabled}}
           <Acmidm::Switch as |acmidm|>
@@ -22,7 +22,7 @@
           <AuIcon @icon="logout" @alignment="left" />Afmelden
         </button>
       </AuDropdown>
-    </AuToolbarGroup>
+    </Group>
   </AuToolbar>
 </div>
 <AuMainContainer as |m|>
