--- a/app/components/signatures/publication-confirmation.hbs
+++ b/app/components/signatures/publication-confirmation.hbs
@@ -9,7 +9,7 @@
       <div class="au-o-grid__item au-u-1-3 au-u-hide-on-print">
         <div class="au-c-rdfa-publication-aside">
           <div class="au-o-box">
-            <AuAlert @alertIcon="info-circle" @alertTitle={{t "publicationConfirmation.alertFirstPart"}}  @alertSkin="info" @alertSize="small">
+            <AuAlert @icon="info-circle" @title={{t "publicationConfirmation.alertFirstPart"}}  @skin="info" @alertSize="small">
               <p>{{t "publicationConfirmation.alertSecondPart"}}<strong> {{t "publicationConfirmation.alertThirdPart"}}</strong> {{t "publicationConfirmation.alertFourthPart"}}</p>
             </AuAlert>
 
