--- a/app/templates/irg-archive/show.hbs
+++ b/app/templates/irg-archive/show.hbs
@@ -13,7 +13,7 @@
     <div class="say-container say-container--sidebar-left say-container--paper say-container--sidebar-right">
       <div class="say-container__main">
           <div class="au-o-box au-o-box--small au-u-background-gray-100">
-            <AuAlert @alertIcon="info-circle" @alertTitle="Niet editeerbaar"  @alertSkin="info" @alertSize="small" class="au-u-margin-bottom-none">
+            <AuAlert @icon="info-circle" @title="Niet editeerbaar"  @skin="info" @size="small" class="au-u-margin-bottom-none">
               <p>Dit is een gearchiveerd document en kan niet worden gewijzigd.</p>
             </AuAlert>
           </div>
