--- a/app/templates/regulatory-statements/show.hbs
+++ b/app/templates/regulatory-statements/show.hbs
@@ -14,7 +14,7 @@
       <div class="say-container__main">
         {{#unless this.readOnly}}
           <div class="au-o-box au-o-box--small au-u-background-gray-100">
-            <AuAlert @alertIcon="info-circle" @alertTitle="Niet editeerbaar"  @alertSkin="info" @alertSize="small" class="au-u-margin-bottom-none">
+            <AuAlert @icon="info-circle" @title="Niet editeerbaar"  @skin="info" @size="small" class="au-u-margin-bottom-none">
               <p>Dit artikel is reeds gepubliceerd. Gepubliceerde agendapunten zijn niet editeerbaar.</p>
             </AuAlert>
           </div>
