add export html to file-actions menu of regulatory-statements and standardize translations

--- a/app/templates/agendapoints/attachments.hbs
+++ b/app/templates/agendapoints/attachments.hbs
@@ -8,7 +8,7 @@
   <:actions>
     <AgendapointMenu @documentContainer={{this.documentContainer}} />
     <AuButton @disabled={{true}} @skin="naked" @icon="nav-up-down" @iconAlignment="right" class="au-u-padding-tiny"><span class="au-u-h-functional au-u-regular">{{t "agendapoint.options"}}</span></AuButton>
-    <AuButton @disabled={{true}}>{{t "agendapoint.save"}}</AuButton>
+    <AuButton @disabled={{true}}>{{t "utils.save"}}</AuButton>
   </:actions>
 </AppChrome>
 <DocumentAttachments @documentContainer={{this.documentContainer}} @decisions={{this.decisions}}/>
