--- a/app/templates/agendapoints/revisions.hbs
+++ b/app/templates/agendapoints/revisions.hbs
@@ -8,10 +8,10 @@
 
   <:actions>
     <AgendapointMenu @documentContainer={{this.documentContainer}} />
-    <AuDropdown @title={{t "agendapoint.options"}} @buttonLabel={{t "agendapoint.options"}} @alignment="right">
+    <AuDropdown @title={{t "utils.fileOptions"}} @buttonLabel={{t "utils.fileOptions"}} @alignment="right">
       <AuButton {{on "click" this.download}} @skin="tertiary" role="menuitem">
         <AuIcon @icon="export" @alignment="left" />
-        {{t "agendapoint.export"}}
+        {{t "utils.htmlExport"}}
       </AuButton>
     </AuDropdown>
     <AuButton @icon="redo" @skin="primary" @disabled={{eq this.revisionDetail.id this.model.editorDocument.id}}  @iconAlignment="left" {{on "click" (fn this.confirmRevisionsToRemove this.revisionDetail)}}>
