--- a/app/templates/meetings/publish/uittreksels/index.hbs
+++ b/app/templates/meetings/publish/uittreksels/index.hbs
@@ -1,7 +1,8 @@
-<AuDataTable @content={{this.model}} @noDataMessage={{t "publish.noExcerptsMessage"}}
+<AuDataTable @content={{this.model}}
+             @noDataMessage={{t "publish.noExcerptsMessage"}}
              @sort={{this.sort}}
              @page={{this.page}}
-             @size={{this.size}}
+             @size={{this.pageSize}}
              @class="container-flex--contain" as |table|>
   <table.menu as |menu|>
     <menu.general>
