--- a/app/templates/agendapoints/edit.hbs
+++ b/app/templates/agendapoints/edit.hbs
@@ -1,7 +1,9 @@
 <AppChrome
   @editorDocument={{this.editorDocument}}
   @documentContainer={{this.documentContainer}}
->
+  @onTitleUpdate={{perform this.onTitleUpdate}}
+  @allowTitleUpdate={{true}}
+  >
   <:return-link>
     <AgendapointBackLink @meetingId={{this.model.returnToMeeting}} />
   </:return-link>
