--- a/app/components/app-chrome.hbs
+++ b/app/components/app-chrome.hbs
@@ -39,10 +39,12 @@
           </AuPill>
         {{/if}}
       </div>
-      <EditorDocumentTitle @title={{@editorDocument.title}} @editActive={{@editorDocument.isNew}} 
-        @onChange={{this.updateDocumentTitle}} @onSubmit={{this.saveDocument}}  @onCancel={{this.resetDocument}} 
+      <EditorDocumentTitle
+        @title={{@editorDocument.title}}
+        @readOnly={{not @allowTitleUpdate}}
+        @onSubmit={{@onTitleUpdate}}
         @readOnly={{@readOnly}} />
-    </Group>
+ s   </Group>
     <Group>
       {{yield to="actions"}}
     </Group>
