--- a/app/components/app-chrome.hbs
+++ b/app/components/app-chrome.hbs
@@ -44,7 +44,7 @@
         @readOnly={{not @allowTitleUpdate}}
         @onSubmit={{@onTitleUpdate}}
         @readOnly={{@readOnly}} />
- s   </Group>
+    </Group>
     <Group>
       {{yield to="actions"}}
     </Group>
