--- a/app/templates/agendapoints/show.hbs
+++ b/app/templates/agendapoints/show.hbs
@@ -8,12 +8,12 @@
   <:actions>
     <AgendapointMenu @documentContainer={{this.documentContainer}} />
     <AuDropdown @title={{t "utils.fileOptions"}} @buttonLabel={{t "utils.fileOptions"}} @alignment="right">
-      {{#if (not this.readOnly)}}
+      {{#unless this.readOnly}}
         <AuButton {{on "click" (perform this.copyAgendapunt)}} @skin="tertiary" role="menuitem">
           <AuIcon @icon="copy" @alignment="left" />
          {{t "appChrome.copyAgendapoint"}}
         </AuButton>
-      {{/if}}
+      {{/unless}}
       <AuButton {{on "click" this.download}} @skin="tertiary" role="menuitem">
         <AuIcon @icon="export" @alignment="left" />
         {{t "utils.htmlExport"}}
