fix translation issue on attachments page

--- a/app/templates/agendapoints/attachments.hbs
+++ b/app/templates/agendapoints/attachments.hbs
@@ -7,7 +7,7 @@
   </:return-link>
   <:actions>
     <AgendapointMenu @documentContainer={{this.documentContainer}} />
-    <AuButton @disabled={{true}} @skin="naked" @icon="nav-up-down" @iconAlignment="right" class="au-u-padding-tiny"><span class="au-u-h-functional au-u-regular">{{t "agendapoint.options"}}</span></AuButton>
+    <AuButton @disabled={{true}} @skin="naked" @icon="nav-up-down" @iconAlignment="right" class="au-u-padding-tiny"><span class="au-u-h-functional au-u-regular">{{t "utils.fileOptions"}}</span></AuButton>
     <AuButton @disabled={{true}}>{{t "utils.save"}}</AuButton>
   </:actions>
 </AppChrome>
