--- a/app/components/editor-plugins/regulatory-statements/sidebar-insert.hbs
+++ b/app/components/editor-plugins/regulatory-statements/sidebar-insert.hbs
@@ -4,4 +4,4 @@
   </AuButton>
 </AuList::Item>
 
-<EditorPlugins::RegulatoryStatements::SearchModal @enabled={{this.modalEnabled}} @closeModal={{this.toggleModal}} />
+<EditorPlugins::RegulatoryStatements::SearchModal @enabled={{this.modalEnabled}} @closeModal={{this.toggleModal}} @insertStatement={{this.insertRegulatoryStatement}}/>
