include container uri in interactive statement view

--- a/app/components/editor-plugins/regulatory-statements/view.hbs
+++ b/app/components/editor-plugins/regulatory-statements/view.hbs
@@ -2,7 +2,9 @@
   @active="true"
   {{did-insert this.didInsert}} 
   property="lblodgn:reglementaireBijlage"
-  typeof="lblodgn:ReglementaireBijlage" as |section|>
+  typeof="lblodgn:ReglementaireBijlage"
+  resource={{this.reglementContainerURI}}
+   as |section|>
   <section>
     <AuToolbar as |Group|>
       <Group>
