store document part link between agendapoint and regulatory statement

--- a/app/components/editor-plugins/regulatory-statements/view.hbs
+++ b/app/components/editor-plugins/regulatory-statements/view.hbs
@@ -1,9 +1,9 @@
 <AuPanel 
   @active="true"
   {{did-insert this.didInsert}} 
-  property="lblodgn:reglementaireBijlage"
-  typeof="lblodgn:ReglementaireBijlage"
+  property="dct:hasPart"
   resource={{this.reglementContainerURI}}
+  typeof="besluitpublicatie:Documentonderdeel"
    as |section|>
   <section>
     <AuToolbar as |Group|>
